--- a/bitlab/scss/layout/_content.scss
+++ b/bitlab/scss/layout/_content.scss
@@ -1130,9 +1130,57 @@ body{
 		width: 100%;
 		height: 400px;
 		background: #fff;
+		position: relative;
 		video{
 			width: 100%;
 			height: auto;
+			position: relative;
+			&::after{
+				content: "1616";
+				position: absolute;
+				top: 15px;
+				left: 15px;
+			}
+		}
+		.play{
+			position: absolute;
+			left: 50%;
+			margin-left: -55.5px;
+			top: 50%;
+			margin-top: -55.5px;
+			z-index: 2;
+		}
+		.cominfo{
+			position: absolute;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			margin: auto;
+			-webkit-transition: all .4s;
+    		transition: all .4s;
+    		-webkit-transform: scale(0);
+    		transform: scale(0);
+    		padding: 50px;
+    		display: flex;
+    		flex-direction: column;
+    		justify-content: space-between;
+    		align-items: flex-start;
+    		h2{
+    			color: #fff;
+    			font: 18px/25px GR;
+    		}
+    		p{
+    			color: #fff;
+    			font: 16px/25px RL;
+    		}
+		}
+		&:hover{
+			.cominfo{
+				-webkit-transform: scale(1);
+    			transform: scale(1);
+				background: rgba(0,0,0,.95);
+			}
 		}
 	}
 	.slick-list{
@@ -2216,6 +2264,17 @@ body{
     		&::after{
 				content: none;
 			}
+    	}
+    	&__video{
+    		height: 190px;
+    		.play{
+    		    width: 70px;
+    		    margin-left: -35px;
+    		    margin-top: -35px;
+    		}
+    		.cominfo{
+    			display: none;
+    		}
     	}
 	}
 	.comment{
